--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -75,7 +75,8 @@
 .info-icons__link:hover,
 .info-list__item-link:hover,
 .func-list__item-link:hover {
-    color: #2568ef;
+    color: var(--hover-color);
+    transition: .3s;
 }
 
 .info-list {
@@ -113,7 +114,11 @@
 }
 
 .func-list__item {
+    padding: 10px 10px 10px 10px;
+}
 
+.func-list__item:nth-child(2) {
+    padding-right: 0;
 }
 
 .func-list__item-link {
@@ -121,7 +126,6 @@
     font-size: 1.4rem;
     font-weight: 600;
     color: var(--text-color);
-    padding: 10px 10px 10px 10px;
     display: block;
     line-height: 26px;
 }
@@ -173,10 +177,12 @@
     color: var(--text-color);
     font-weight: bold;
     margin: 0 18px;
+    transition: .3s;
 }
 
 .header__nav-item-link:hover {
-    color: #2568ef;
+    color: var(--hover-color);
+    transition: .3s;
 }
 
 .header__nav-item-icon {
@@ -184,29 +190,250 @@
     font-size: 1rem;
 }
 
+.header__nav-item:hover .submenu-list,
+.header__nav-item:hover .menu-sidebar {
+    display: block;
+}
+
 .submenu-list {
     padding-left: 0;
     margin: 0;
     list-style: none;
     position: absolute;
-    box-shadow: 0 0 2px rgba(0, 0, 0, 0.5);
+    box-shadow: 0 0px 1px rgba(0, 0, 0, 0.5);
+    background-color: var(--white-color);
     min-width: 242px;
     top: 100%;
     margin-top: 20px;
     padding: 15px 0;
+    border-radius: 4px;
+    animation: fadeIn linear .26s;
+    transition: .3s;
+    display: none;
+}
+
+.submenu-list::before {
+    content: "";
+    display: block;
+    position: absolute;
+    top: -26px;
+    height: 40px;
+    width: 100px;
 }
 
 .submenu-list__item {
-
+    position: relative;
 }
 
 .submenu-list__item-link {
     text-decoration: none;
-    font-size: 1.6rem;
+    font-size: 1.5rem;
     color: var(--text-color);
     padding: 8px 20px;
-    font-weight: 700;
+    font-weight: 600;
     display: block;
+    line-height: 1.8rem;
+}
+
+.submenu-list__item-link:hover {
+    color: var(--hover-color);
+    transition: .3s;
+}
+
+.submenu-list__item-icon {
+    float: right;
+    font-size: 1rem;
+    margin-top: 3px;
+}
+
+.submenu-list__item:hover .submenu-level1 {
+    display: block;
+}
+
+.submenu-level1 {
+    position: absolute;
+    list-style: none;
+    padding-left: 0;
+    margin: 0;
+    right: -100%;
+    top: -44%;
+    min-width: 242px;
+    box-shadow: 0 0px 2px rgba(0, 0, 0, 0.5);
+    padding: 15px 0;
+    border-radius: 4px;
+    background-color: var(--white-color);
+    z-index: 1;
+    animation: fadeIn linear .26s;
+    display: none;
+}
+
+.submenu-level1__item {
+
+}
+
+.submenu-level1__item-link {
+    text-decoration: none;
+    font-size: 1.5rem;
+    color: var(--text-color);
+    font-weight: 600;
+    display: block;
+    padding: 8px 20px;
+    line-height: 1.8rem;
+}
+
+.submenu-level1__item-link:hover {
+    color: var(--hover-color);
+    transition: .3s;
+}
+
+/* sub menu item */
+.menu-sidebar {
+    position: absolute;
+    min-width: 1170px;
+    background-color: var(--white-color);
+    left: -418px;
+    top: calc(100% + 14px);
+    padding: 30px 30px 0 30px;
+    margin-top: 10px;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
+    display: none;
+    animation: fadeIn linear .26s;
+    transition: .3s;
+}
+
+.menu-sidebar::before {
+    content: "";
+    display: block;
+    position: absolute;
+    top: -26px;
+    height: 40px;
+    width: 100px;
+    right: 55%;
+}
+
+.menu-sidebar__title {
+    font-size: 22px;
+    font-weight: 800;
+    line-height: 2.6rem;
+    padding-bottom: 20px;
+    margin: 0 0 30px 0;
+    border-bottom: 1px solid #e4e2e2;
+    color: var(--text-color);
+}
+
+.sidebar-list {
+    padding-left: 0;
+    list-style: none;
+    display: flex;
+    justify-content: space-between;
+}
+
+.sidebar-list__item {
+    width: 23%;
+}
+
+.sidebar-item {
+    padding: 0 4px 50px 4px;
+}
+
+.sidebar-item__link {
+    text-decoration: none;
+    display: block;
+    position: relative;
+    height: 160px;
+    width: 100%;
+    overflow: hidden;
+}
+
+.sidebar-item__book {
+    display: block;
+    position: absolute;
+    border-top: 46px solid #2b44ff;
+    border-right: 46px solid #fff;
+    top: 100%;
+    right: -19%;
+    transition: all 0.25s ease;
+}
+
+.sidebar-item__link:hover .sidebar-item__book {
+    right: 0px;
+    top: 114px;
+    transition: all 0.25s ease;
+}
+
+.sidebar-item__imgbug {
+    height: 160px;
+    width: 100%;
+    border-radius: 6px;
+}
+
+.sidebar-item__img {
+    background-image: url(/assets/img/item1.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding-top: 50%;
+    height: 160px;
+    border-radius: 6px;
+    background-position: center center;
+}
+
+.sidebar-item__overlay {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 100%;
+    width: 100%;
+    opacity: 0;
+    transition: 0.2s ease;
+    background-color: rgba(0, 0, 0, 0.2);
+    border-radius: 6px;
+}
+
+.sidebar-item__link:hover .sidebar-item__overlay {
+    opacity: 1;
+}
+
+.sidebar-info {
+    margin-top: 20px;
+}
+
+.sidebar-info__title {
+    margin: 0 0 8px 0;
+}
+
+.sidebar-info__title-link {
+    text-decoration: none;
+    font-size: 1.6rem;
+    color: var(--text-color);
+    font-weight: 800;
+    line-height: 2rem;
+}
+
+.sidebar-info__date {
+    display: flex;
+    font-size: 1.2rem;
+    font-weight: 700;
+    color: #9F9F9F;
+    align-items: center;
+}
+
+.sidebar-info__date-time {
+
+}
+
+.sidebar-info__dot {
+    width: 6px;
+    height: 6px;
+    background-color: #9F9F9F;
+    border-radius: 4px;
+    margin: 0 8px;
+    border: 1px solid #9F9F9F;
+}
+
+.sidebar-info__realtime {
+
 }
 
 
@@ -228,6 +455,7 @@
     background-color: #f5f5f5;
     border-radius: 4px;
     cursor: pointer;
+    transition: .3s;
 }
 
 .search:hover {
