--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -5,6 +5,8 @@
     --hover-color: #2568ef;
     --pink-color: #ff3366;
     --blue-color: #2b44ff;
+
+    --slider-height: 640px;
 }
 
 * {
@@ -73,12 +75,13 @@ html {
     display: inline-block;
     height: 28px;
     background-color: var(--white-color);
-    margin-bottom: 11px;
+    margin-bottom: 14px;
+    font-size: 1.4rem;
 }
 
 .info__cate-double {
     display: flex;
-    margin-bottom: 11px;
+    margin-bottom: 14px;
 
 }
 
@@ -87,11 +90,12 @@ html {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 0 15px;
+    padding: 0 14px;
     border: 1px solid #e0dede;
     border-radius: 30px;
     color: var(--text-color);
     transition: .3s;
+    background-color: var(--white-color);
 }
 
 .info__cate-link:hover {
@@ -136,6 +140,72 @@ html {
 
 .cate-dot--orange {
     background-color: #ed7e4f;
+}
+
+.tag-info {
+    margin-top: 20px;
+
+}
+
+.tag-info__title {
+    margin: 0 0 8px 0;
+}
+
+.tag-info__title-link {
+    text-decoration: none;
+    font-size: 1.6rem;
+    color: var(--text-color);
+    font-weight: 800;
+    line-height: 2rem;
+}
+
+.tag-info__title-link--slide {
+    text-decoration: none;
+    font-size: 3.6rem;
+    color: var(--white-color);
+    font-weight: 800;
+    line-height: 4.5rem;
+    max-width: 56%;
+    display: inline-block;
+}
+
+.tag-info__date {
+    display: flex;
+    font-size: 1.2rem;
+    font-weight: 700;
+    color: #9F9F9F;
+    align-items: center;
+}
+
+.tag-info__date--slide {
+    color: var(--white-color);
+    line-height: 2.1rem;
+}
+
+.tag-info__by {
+
+}
+
+.tag-info__by-link {
+    text-decoration: none;
+    color: var(--white-color);
+    font-weight: 600;
+}
+
+.tag-info__dot {
+    width: 6px;
+    height: 6px;
+    border-radius: 4px;
+    margin: 0 8px;
+    border: 1px solid #909090;
+}
+
+.tag-info__date-time {
+
+}
+
+.tag-info__realtime {
+
 }
 
 @keyframes fadeIn {
