--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -338,64 +338,7 @@
     padding: 0 4px 50px 4px;
 }
 
-.sidebar-item__link {
-    text-decoration: none;
-    display: block;
-    position: relative;
-    height: 160px;
-    width: 100%;
-    overflow: hidden;
-}
 
-.sidebar-item__book {
-    display: block;
-    position: absolute;
-    border-top: 46px solid #2b44ff;
-    border-right: 46px solid #fff;
-    top: 100%;
-    right: -19%;
-    transition: all 0.25s ease;
-}
-
-.sidebar-item__link:hover .sidebar-item__book {
-    right: 0px;
-    top: 114px;
-    transition: all 0.25s ease;
-}
-
-.sidebar-item__imgbug {
-    height: 160px;
-    width: 100%;
-    border-radius: 6px;
-}
-
-.sidebar-item__img {
-    background-image: url(/assets/img/item1.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    padding-top: 50%;
-    height: 160px;
-    border-radius: 6px;
-    background-position: center center;
-}
-
-.sidebar-item__overlay {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    height: 100%;
-    width: 100%;
-    opacity: 0;
-    transition: 0.2s ease;
-    background-color: rgba(0, 0, 0, 0.2);
-    border-radius: 6px;
-}
-
-.sidebar-item__link:hover .sidebar-item__overlay {
-    opacity: 1;
-}
 
 .btn-with-search {
     display: flex;
@@ -548,6 +491,13 @@
 /* End slider */
 
 /* Content */
+.content {
+    height: 6000px;
+}
+
+.content__tag-info {
+    margin-bottom: 68px;
+}
 
 .tag-info__title-content {
     text-decoration: none;
@@ -562,4 +512,173 @@
 
 .tag-info__title-content:hover {
     color: var(--hover-color);
+}
+
+
+.content__case {
+
+}
+
+.case-item {
+    position: relative;
+    width: 100%;
+}
+
+.case-item__overlay {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 100%;
+    width: 100%;
+    opacity: 1;
+    transition: 0.2s ease;
+    background-color: rgba(0, 0, 0, 0.3);
+    border-radius: 6px;
+}
+
+.case-item:hover .case-item__overlay {
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.case-item__img {
+    background-image: url(https://wp.wp-preview.com/inhype/inhype-1/wp-content/uploads/2019/11/ofhlstldxzk-1140x694.jpg);
+    height: 460px;
+    width: 100%;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    border-radius: 6px;
+    position: relative;
+}
+
+.case-item__icon {
+    display: flex;
+    height: 38px;
+    width: 38px;
+    background-color: #fff;
+    font-size: 1.6rem;
+    position: absolute;
+    z-index: 1;
+    border-radius: 50%;
+    top: 25px;
+    right: 25px;
+}
+
+.case-item__icon-img {
+    margin: auto;
+}
+
+.case-item__info {
+    position: absolute;
+    bottom: 0;
+    padding: 30px;
+    height: 100%;
+    display: flex;
+    align-items: flex-end;
+}
+
+.info-with-desc {
+    margin: 0 25px;
+    transition: all 0.35s ease; 
+}
+
+.case-item__info:hover .info-with-desc {
+    padding-bottom: 20px;
+}
+
+.case-info__dot {
+    border-color: var(--white-color);
+}
+
+.case-info__date {
+    color: var(--white-color);
+    font-weight: 600;
+}
+
+.case-item__info-desc {
+    font-size: 1.6rem;
+    color: var(--white-color);
+    margin: 18px 0 10px 0;
+    line-height: 2.6rem;
+}
+
+.case-recent {
+    padding: 0 36px;
+}
+
+.case-recent__title {
+    font-size: 3rem;
+    font-weight: 800;
+    border-bottom: 1px solid var(--border-color);
+    padding-bottom: 20px;
+    line-height: 3rem;
+    margin: 0 0 30px 0;
+}
+
+.case-recent__content {
+
+}
+
+.case-recent__content-item {
+    margin-bottom: 26px;
+}
+
+/* content Technology */
+.content-technology {
+    margin-top: 52px;
+}
+
+.content-technology__title {
+}
+
+.content__title-main {
+    font-size: 3rem;
+    font-weight: 800;
+    margin: 0;
+    line-height: 3rem;
+}
+
+.content__title-desc {
+    font-size: 1.2rem;
+    font-weight: normal;
+    text-transform: uppercase;
+    color: var(--text-color);
+    margin: 6px 0 0 0;
+}
+
+/* img overlay book */
+
+
+.technology-item__info {
+
+}
+
+.technology-item__desc {
+
+}
+
+.content-technology__btn {
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    height: 86px;
+    margin-bottom: 60px;
+}
+
+.content-today-highlight { 
+    background-color: #f5f5f5;
+}
+
+.content-today {
+    padding-top: 40px;
+}
+
+.content-today__title {
+
+}
+
+.today-highlight-container {
+    padding: 0 40px;
 }
