--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -681,6 +681,66 @@
 .today-highlight-container {
 }
 
+.today-content__link {
+    text-decoration: none;
+    display: block;
+    position: relative;
+    height: 166px;
+    width: 100%;
+    overflow: hidden;
+    margin-bottom: 30px;
+}
+
+.today-content__container-img {
+    position: relative;
+    height: 100%;
+}
+
+.today-content__img {
+    width: 100%;
+    height: 100%;
+    border-radius: 6px;
+    object-fit: cover;
+}
+
+.today-content__overlay {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 100%;
+    width: 100%;
+    opacity: 0;
+    transition: 0.2s ease;
+    background-color: rgba(0, 0, 0, 0.2);
+    border-radius: 6px;
+}
+
+.today-content__link:hover .today-content__overlay {
+    opacity: 1;
+}
+
+.today-content__book {
+    display: block;
+    position: absolute;
+    border-top: 48px solid #2b44ff;
+    border-right: 48px solid #fff;
+    top: 100%;
+    right: -48px;
+    transition: all 0.25s ease;
+    opacity: 0;
+}
+
+.today-content__link:hover .today-content__book {
+    right: 0px;
+    top: calc(166px - 28%);
+    transition: all 0.25s ease;
+    opacity: 1;
+}
+
+
+
 /* art & culture */
 .post-item {
     position: relative;
@@ -837,8 +897,8 @@
     background-repeat: no-repeat;
     background-size: auto;
     background-position: center center;
-    margin-top: 60px;
     border-radius: 8px;
+    margin: 60px 0;
 }
 
 .send-mail {
@@ -883,4 +943,72 @@
     font-weight: 600;
     line-height: 2rem;
     margin-top: 30px;
+}
+
+/* Categories */
+.categories-item {
+    position: relative;
+    height: 280px;
+    width: 100%;
+    display: inline-block;
+}
+
+.categories-item__img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    border-radius: 6px;
+}
+
+.categories-item__overlay {
+    position: absolute;
+    right: 0;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    border-radius: 6px;
+    background-color: rgba(0, 0, 0, .2);
+    transition: 0.2s ease;
+}
+
+.categories-item:hover .categories-item__overlay--violet {
+    background-color: #994db1;
+}
+
+.categories-item:hover .categories-item__overlay--blue {
+    background-color: #2590ed;
+}
+
+.categories-item:hover .categories-item__overlay--darkblue {
+    background-color: #0d30c3;
+}
+
+.categories-item:hover .categories-item__overlay--pink {
+    background-color: #c74970;
+}
+
+.categories-item__info {
+    position: absolute;
+    bottom: 0;
+    height: 100%;
+    width: 100%;
+    padding: 30px;
+}
+
+.categories-item__info-post {
+    font-size: 1.4rem;
+    font-weight: 600;
+    color: var(--white-color);
+    opacity: 0.8;
+    line-height: 2rem;
+    margin-bottom: 20px;
+}
+
+.categories-item__info-cate {
+    display: inline-flex;
+}
+
+.categories-item__info-btn {
+    position: relative;
+    top: 106px;
 }
