--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -490,7 +490,6 @@
 
 /* Content */
 .content {
-    height: 10000px;
 }
 
 .content__tag-info {
@@ -573,7 +572,8 @@
     bottom: 0;
     padding: 30px;
     height: 100%;
-    display: flex;
+    width: 100%;
+    display: inline-flex;
     align-items: flex-end;
 }
 
@@ -609,7 +609,7 @@
 .case-recent__title {
     font-size: 3rem;
     font-weight: 800;
-    border-bottom: 1px solid var(--border-color);
+    border-bottom: 1px solid var(--border-color-grey);
     padding-bottom: 20px;
     line-height: 3rem;
     margin: 0 0 30px 0;
@@ -786,6 +786,7 @@
     height: 38px;
     width: 38px;
     background-color: #fff;
+    color: var(--black-color);
     font-size: 1.6rem;
     position: absolute;
     z-index: 1;
@@ -796,6 +797,7 @@
 
 .post-item__icon-img {
     margin: auto;
+    color: none;
 }
 
 .post-item__info {
@@ -851,6 +853,7 @@
 
 .post__title-link {
     font-size: 3rem;
+    line-height: 3.7rem;
 }
 
 .post-info__title-link {
@@ -1021,6 +1024,7 @@
 .content-morefrom {
     background-color: #13181C;
     padding: 100px 100px 50px 100px;
+    margin-bottom: 60px;
 }
 
 .morefrom-main {
@@ -1125,4 +1129,461 @@
     top: calc(340px - 14%);
     transition: all 0.25s ease;
     opacity: 1;
+}
+
+/* Video */
+.content-video {
+    margin-bottom: 60px;
+}
+
+.content-video__wrap-item {
+
+}
+
+.content-video__item {
+    position: relative;
+    height: 500px;
+    width: 100%;
+}
+
+.content-video__wrap-img {
+    
+}
+
+.content-video__img {
+    height: 500px;
+    width: 100%;
+    object-fit: cover;
+}
+
+.content-video__img--border {
+    border-top-left-radius: 6px;
+    border-bottom-left-radius: 6px;
+}
+
+.content-video__img-s {
+    height: 250px;
+}
+
+.overlay-topright {
+    border-top-right-radius: 6px;
+}
+
+.overlay-bottomright {
+    border-bottom-right-radius: 6px;
+}
+
+.content-video__overlay {
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    top: 0;
+    background-color: rgba(0, 0, 0, 0.2);
+    transition: .25s ease;
+    width: 100%;
+    height: 100%;
+}
+
+.content-video__item:hover .content-video__overlay {
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.content-video__info {
+    position: absolute;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    padding: 30px;
+    display: flex;
+    align-items: flex-end;
+    transition: .2s;
+}
+
+.content-video__item:hover .content-video__info {
+    padding-bottom: 56px;
+}
+
+.video-item__info-size {
+    font-size: 2.2rem;
+    line-height: 2.7rem;
+}
+
+/* Selected Post */
+
+.content-selectedpost {
+    border-bottom: 1px solid #e0dede;
+    padding-bottom: 20px;
+    margin-bottom: 60px;
+}
+
+.selectedpost-info {
+    text-align: center;
+}
+
+.selectedpost-imgdesc {
+
+}
+
+.item-selectedpost {
+}
+
+.img-itemheight {
+    height: 108px;
+}
+
+.selectedpost__book {
+    right: -26%;
+}
+
+.img-item:hover .selectedpost__book {
+    right: 0px;
+    top: 62px;
+    transition: all 0.25s ease;
+}
+
+.selectedpost-tag {
+    margin-bottom: 30px;
+}
+
+.tag-info__selectedpost {
+    display: inline-block;
+    width: 76%;
+}
+
+.selectedpost-content__link {
+    text-decoration: none;
+    display: block;
+    position: relative;
+    height: 360px;
+    width: 100%;
+    overflow: hidden;
+    margin-bottom: 30px;
+}
+
+.selectedpost-content__link:hover .today-content__overlay {
+    opacity: 1;
+}
+
+.selectedpost-content__link:hover .today-content__book {
+    right: 0px;
+    top: calc(360px - 13%);
+    transition: all 0.25s ease;
+    opacity: 1;
+}
+
+/* Trending today */
+.content-trending {
+    margin-bottom: 20px;
+}
+
+.trending-info__size {
+    font-size: 1.8rem;
+    line-height: 2.2rem;
+    transition: .2s ease;
+}
+
+/* Page Post */
+.pagepost-popular {
+    margin-bottom: 40px;
+}
+
+.pagepost-item {
+    padding-left: 36px;
+}
+
+.content-title__main-page {
+    font-size: 2.2rem;
+    line-height: 2.7rem;
+    padding-bottom: 20px;
+}
+
+.boder-title__page {
+    border-bottom: 1px solid var(--border-color-grey);
+}
+
+.pagepost-content__link {
+    height: 214px;
+}
+
+.today-content__link:hover .pagepost-content__book {
+    right: 0px;
+    top: calc(214px - 22%);
+    transition: all 0.25s ease;
+    opacity: 1;
+}
+
+.pagepost-item__message {
+    background-color: #f7f7f7;
+    padding: 50px 40px;
+    border-radius: 6px;
+    margin-bottom: 40px;
+}
+
+.pagepost__message-heading {
+    display: flex;
+    justify-content: space-between;
+}
+
+.message__heading-title {
+    font-size: 1.7rem;
+    color: var(--text-color);
+    font-weight: 800;
+}
+
+.pagepost-item__message-content {
+    font-size: 1.5rem;
+    color: var(--text-color);
+    line-height: 2.6rem;
+    font-weight: 600;
+    margin: 10px 0 30px 0;
+}
+
+.pagepost-item__message-btn {
+}
+
+.popular-item {
+    display: flex;
+    justify-content: space-between;
+}
+
+.popular-content {
+    display: inline-block;
+    width: 200px;
+}
+
+.popular-item__img {
+    height: 90px;
+    width: 110px;
+    object-fit: cover;
+}
+
+.popular-item__book {
+    display: block;
+    position: absolute;
+    border-top: 42px solid #2b44ff;
+    border-right: 42px solid #fff;
+    top: 100%;
+    right: -42%;
+    transition: all 0.25s ease;
+}
+
+.img-item:hover .popular-item__book {
+    right: 0px;
+    top: 48px;
+    transition: all 0.25s ease;
+}
+
+.post-info__size {
+    font-size: 1.6rem;
+}
+
+.pagepost-social {
+    margin-bottom: 48px;
+}
+
+.pagepost-social__wrap {
+    border-radius: 4px;
+}
+
+.pagepost-social__link {
+    text-decoration: none;
+    color: var(--white-color);
+    font-size: 1.4rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 6px 20px;
+    line-height: 1.5rem;
+    background-color: #48494b;
+    border-radius: 4px;
+    margin-bottom: 8px;
+}
+
+.pagepost-social__link:hover {
+    background-color: #48494b;
+}
+
+.pagepost-social__link--facebook {
+    background-color: #4267B2;
+}
+
+.pagepost-social__link--twitter {
+    background-color: #1DA1F2;
+}
+
+.pagepost-social__link--instagram {
+    background-color: #369;
+}
+
+.pagepost-social__link--youtube {
+    background-color: #F61004;
+}
+
+.pagepost-social__title-number {
+
+}
+
+.pagepost-social__title {
+    display: block;
+    font-weight: 800;
+    line-height: 1.5rem;
+}
+
+.pagepost-social__number {
+    font-size: 1.2rem;
+    line-height: 1.5rem;
+    font-weight: 700;
+}
+
+.pagepost-social__icon-wrap {
+
+}
+
+.pagepost-social__icon {
+    font-size: 1.6rem;
+
+}
+
+.pagepost-banner {
+    width: 330px;
+    height: 504px;
+    object-fit: cover;
+}
+
+.banner-link {
+    text-decoration: none;
+    height: auto;
+    width: auto;
+}
+
+/* Footer */
+.footer {
+    background-color: #13181C;
+    padding: 80px 0 50px 0;
+    color: var(--white-color);
+}
+
+.footer-about {
+}
+
+.footer-item__title {
+    font-size: 1.8rem;
+    line-height: 2.2rem;
+    font-weight: 700;
+    margin: 0 0 30px 0;
+}
+
+.footer-about__msgbtn {
+    font-size: 1.6rem;
+    line-height: 2.6rem;
+    font-weight: 600;
+
+}
+
+.footer-about__msg {
+    margin: 0 0 25px 0;
+}
+
+.footer-about__btn {
+
+}
+
+.footer-nav {
+
+}
+
+.footer-nav__list {
+    padding-left: 0;
+    margin: 0;
+    list-style: none;
+}
+
+.footer-nav__item {
+    padding-bottom: 18px;
+}
+
+.footer-nav__item-link {
+    text-decoration: none;
+    color: var(--white-color);
+    opacity: .5;
+    font-size: 1.6rem;
+}
+
+.footer-nav__item-link:hover {
+    color: var(--white-color);
+    opacity: .8;
+}
+
+.footer-subscribe__form {
+    background-color: rgba(255,255,255,0.1);
+    padding: 30px;
+    border-radius: 6px;
+}
+
+.footer-subscribe__form-msg {
+    font-size: 1.4rem;
+    margin-bottom: 25px;
+    font-weight: 600;
+}
+
+.footer-subscribe__form-send {
+
+}
+
+.footer-subscribe__form-input {
+    width: 100%;
+    font-size: 1.6rem;
+    padding: 8px 20px;
+    margin-bottom: 20px;
+    border-radius: 6px;
+    outline: none;
+}
+
+.footer-subscribe__form-btn {
+    width: 100%;
+}
+
+.footer-bottom {
+    margin-top: 60px;
+    border-top: 1px solid rgba(255, 255, 255, 0.15);
+    padding-top: 30px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.footer-copyright {
+    color: #9F9F9F;
+    font-size: 1.6rem;
+}
+
+.footer-copyright__art {
+    color: var(--white-color);
+    text-decoration: none;
+    font-weight: 700;
+}
+
+.footer-social {
+
+}
+
+.footer-social__link {
+    text-decoration: none;
+    color: var(--white-color);
+    font-size: 1.6rem;
+    transition: .2s linear;
+    width: 40px;
+    height: 40px;
+    line-height: 40px;
+    display: inline-block;
+    text-align: center;
+}
+
+.footer-social__link:hover {
+    opacity: .6;
+}
+
+.footer-social__icon {
+    
 }
