Fix desc item limiting

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -443,5 +443,10 @@ html {
     font-size: 1.6rem;
     margin-top: 16px;
     line-height: 2.6rem;
+    height: 7.2rem;
     color: var(--text-color);
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 3;
 }
