--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -20,7 +20,7 @@
 html {
     font-size: 62.5%;
     box-sizing: border-box;
-    font-family: 'Nunito', sans-serif;
+    font-family: 'Nunito', 'Lato', sans-serif;
     line-height: 1.6em;
 }
 
